--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@types/node": "^20.10.4",
+    "ajv": "^8.12.0",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "axios": "^1.6.2",
-    "react-beautiful-dnd": "^13.1.1",
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
-    "@types/node": "^20.10.4",
-    "typescript": "^4.9.5",
-    "ajv": "^8.12.0"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3"
   }
 }
